# vk-bot-detector

./: .gitignore  README.md  main.py  pyproject.toml
crawler/: botnadzor.py  comment_crawling.py  config.py  helpers.py  logger.py  pipeline.py  post_crawling.py  profile_crawling.py  session_pool.py
detection/: master_feature_engineering.py  model_training.ipynb
storage/: comment.py  models.py  post.py  profile.py
